--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img class="img__bottom" src="/assets/img/bg-pattern-bottom-desktop.svg" alt="">
     </section>
 
-
+     <div class="challenge"> Challeng By: <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA">frontendmentor</a> Develop By: Harold P. Abella</div>
     
     <!-- <img class="bottom__img" src="assets/img/bg-pattern-bottom-desktop.svg" alt=""> -->
 </body>
