--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img class="top__img" src="assets/img/bg-pattern-top-desktop.svg" alt="">
-    <section class="social" id="social">
-        <div class="social__container">
+    <img class="top__img" src="assets/img/bg-pattern-top-desktop.svg" alt="top">
+    <!-- <img class="img__bottom" src="/assets/img/bg-pattern-bottom-desktop.svg" alt=""> -->
+    <section class="social bd-container" id="social">
+        <div class="social__container ">
             <div class="top__container">
                 <h1 class="big__text">10,000+ of our<br>users love our<br> products.</h1>
                 <p class="small__text">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services</p>
@@ -62,10 +63,10 @@
             </div>
         </div>
    
-        <img class="img__bottom" src="/assets/img/bg-pattern-bottom-desktop.svg" alt="">
+        
     </section>
 
-     <div class="challenge"> Challeng By: <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA">frontendmentor</a> Develop By: Harold P. Abella</div>
+    <!-- <div class="challenge"> Challeng By: <a href="https://www.frontendmentor.io/challenges/testimonials-grid-section-Nnw6J7Un7">frontendmentor</a> Develop By: Harold P. Abella</div> -->
     
     <!-- <img class="bottom__img" src="assets/img/bg-pattern-bottom-desktop.svg" alt=""> -->
 </body>
